<resources>
    <string name="app_name">Trip Planner</string>
    <string name="tvWelcome">TRIP PLANNER</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="etFirst">First Name</string>
    <string name="etLast">Last Name</string>
    <string name="rbMale">Male</string>
    <string name="rbFemale">Female</string>
    <string name="etPass2">Confirm Password</string>
    <string name="btncreate">Create A New Trip</string>
    <string name="btnfind">Find A Trip</string>
    <string name="tvTrips">TRIPS</string>
    <string name="tvSocial">CONNECT WITH PEOPLE</string>
    <string name="btnFindFriend">Find Friends</string>
    <string name="btnChat">Chat</string>
    <string name="mytrips">My Trips</string>
    <string name="fullname">Name:</string>
    <string name="gender">Gender:</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="update">Update</string>
    <string name="email">Email:</string>
    <string name="send">Send</string>
    <string name="chatbox">Enter message</string>
    <string name="createdBy">Created By:</string>
    <string name="map">Show In Map</string>
    <string name="Chatbox">Group Chat</string>
    <string name="leave">Leave Trip</string>
    <string name="join">Join Trip</string>
    <string name="add">Add People</string>
    <string name="dateBtn">Pick A Date</string>
    <string name="Date">Date:</string>
    <string name="joiendby">Joined By:</string>
    <string name="todo">TODO</string>
    <string name="Location">Location:</string>
    <string name="selLoc">Select Location</string>
    <string name="select">Select</string>
    <string name="search">Search</string>
</resources>
