<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard">

    <Button
        android:id="@+id/buttonCreateTrip"
        android:layout_width="255dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:text="@string/btncreate"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTrips" />

    <Button
        android:id="@+id/buttonFindTrips"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnfind"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateTrip"
        app:layout_constraintStart_toStartOf="@+id/buttonCreateTrip"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateTrip" />

    <Button
        android:id="@+id/buttonFindFriends"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:text="@string/btnFindFriend"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvSocials"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/tvSocials"
        app:layout_constraintTop_toBottomOf="@+id/tvSocials" />

    <TextView
        android:id="@+id/textViewTrips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tvTrips"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSocials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tvSocial"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/buttonFindTrips"
        app:layout_constraintStart_toStartOf="@+id/buttonFindTrips"
        app:layout_constraintTop_toBottomOf="@+id/buttonMyTrips" />

    <Button
        android:id="@+id/buttonChat"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="18dp"
        android:text="@string/btnChat"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonFindFriends"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/buttonFindFriends"
        app:layout_constraintTop_toBottomOf="@+id/buttonFindFriends" />

    <Button
        android:id="@+id/buttonMyTrips"
        android:layout_width="253dp"
        android:layout_height="61dp"
        android:layout_marginTop="18dp"
        android:text="@string/mytrips"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonFindTrips"
        app:layout_constraintStart_toStartOf="@+id/buttonFindTrips"
        app:layout_constraintTop_toBottomOf="@+id/buttonFindTrips" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="46dp"
        android:layout_height="41dp"
        app:srcCompat="@drawable/ic_launcher_background"
        tools:layout_editor_absoluteX="338dp"
        tools:layout_editor_absoluteY="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>